Fix MC instruction offset

--- a/apps/style/craft/style.scss
+++ b/apps/style/craft/style.scss
@@ -721,7 +721,7 @@ $height-to-width: 434 / 477;
   width: 100%;
 }
 
-.dash_modal {
+.minecraft .dash_modal {
   top: 80px;
   margin-left: -340px;
 
