--- a/dashboard/app/views/levels/_form.html.haml
+++ b/dashboard/app/views/levels/_form.html.haml
@@ -29,8 +29,26 @@
     = render partial: 'levels/editors/odometer', locals: {f: f} if @level.is_a? Odometer
     = render partial: 'levels/editors/vigenere', locals: {f: f} if @level.is_a? Vigenere
     = render partial: 'levels/editors/frequency_analysis', locals: {f: f} if @level.is_a? FrequencyAnalysis
+  .field
+    = f.hidden_field :published
+    -#= f.label 'Save your work but don\'t publish it to the pipeline'
+    -#  %input#save{:name => 'publish', :selected => true, :type => 'radio'}
+    -#= f.label 'Save and publish your work';
+    -#  %input#saveAndPublish{:name => 'publish', :selected => false, :type => 'radio'}
   .actions
-    = f.submit
+    = f.submit 'Save your progress', {:id => 'saveProgress'}
+    = f.submit 'Save and publish your progress', {:id => 'publishLevel'}
 #validation-error.validation-error{style: 'background-color: yellow'}
 :javascript
   #{render partial: 'shared/ajax_submit', formats: [:js],  locals: {form_selector: @level.new_record? ? '#new_level' : '.edit_level'}}
+  $(document).ready(function() {
+    $('#saveProgress').click(function() {
+      $('#level_published').val(false);
+    });
+
+    $('#publishLevel').click(function() {
+      $('#level_published').val(true);
+    });
+  });
+
+
