--- a/dashboard/app/views/layouts/application.html.haml
+++ b/dashboard/app/views/layouts/application.html.haml
@@ -8,6 +8,7 @@
     /[if IE 9]
       %meta{'http-equiv' => 'X-UA-Compatible', content: 'IE=Edge'}
     = stylesheet_link_tag    'application', media: 'all'
+    = stylesheet_link_tag    'css/code-studio', media: 'all'
     = javascript_include_tag 'application'
     = javascript_include_tag 'js/code-studio-common'
     = javascript_include_tag 'js/code-studio'
