--- a/dashboard/app/views/levels/_form.html.haml
+++ b/dashboard/app/views/levels/_form.html.haml
@@ -33,7 +33,7 @@
     = f.hidden_field :published
   .actions
     = f.submit 'Save your progress', {:id => 'saveProgress'}
-    = f.submit 'Save and publish your completed work', {:id => 'publishedLevel'}
+    = f.submit 'Save and publish your completed work', {:id => 'publishLevel'}
 #validation-error.validation-error{style: 'background-color: yellow'}
 :javascript
   #{render partial: 'shared/ajax_submit', formats: [:js],  locals: {form_selector: @level.new_record? ? '#new_level' : '.edit_level'}}
