--- a/pegasus/sites.v3/code.org/views/teacher_announcements.haml
+++ b/pegasus/sites.v3/code.org/views/teacher_announcements.haml
@@ -6,12 +6,10 @@
         = I18n.t(:dashboard_announce_view_all)
         >>
   %div.announce-content
-    %a{:href=>"http://blog.code.org/post/138335868703/the-white-house-announces-plans-to-bring-computer"}
-      %div.content-img-container
-        %img.content-img{:src=>"/images/fit-300/professional-learning.jpg"}
-    %div.content-text
+    %div.content-video
+      = view :display_video_thumbnail, id: "cspoverview", video_code: "HoKRZRI9IDk", play_button: 'center', download_path: "//videos.code.org/cs-principles/overview-HD.mp4"
+    %div.content-text-with-video
       = I18n.t(:dashboard_announce_message)
   %div.announce-learn-more
-    %a{:href=>CDO.code_org_url('/educate')}
+    %a{:href=>CDO.code_org_url('/educate/professional-learning/cs-principles')}
       %button= I18n.t(:dashboard_announce_button_text)
-
